--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^5.3.5",
     "nuxt": "3.0.0-rc.11"
+  },
+  "dependencies": {
+    "firebase": "^9.12.1",
+    "node-schedule": "^2.1.0"
   }
 }
